--- a/1.html
+++ b/1.html
@@ -4,9 +4,185 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .output{
+            font-weight: bold;
+        }
+        #payment{
+            text-decoration: underline;
+        }
+        #garph{
+            border: solid black 1px;
+        }
+        th,td{
+            vertical-align: top;
+        }
+    </style>
 </head>
 <body>
-    <h1>hhhhh</h1>
-    <h2>666666</h2>
+    <table>
+        <tr>
+            <th>输入数据</th>
+            <td></td>
+            <th>loan Balance,Cumulateive Equity,and Interset Payments</th>
+        </tr>
+        <tr>
+            <td>Amont of the loan($)</td>
+            <td><input id='amount' onchange='calculate()'></td>
+            <td rowspan="8"><canvas id="graph" width="400" height="250"></canvas></td>
+        </tr>
+        <tr>
+            <td>Annual interest(%)</td>
+            <td><input id='apr' onchange='calculate()'></td>
+        </tr>
+        <tr>
+            <td>Repayment period(years):</td>
+            <td><input id='years' onchange='calculate()'></td>
+        </tr>
+        <tr>
+            <td>Zipcode</td>
+            <td><input id='zipcode' onchange='calculate()'></td>
+        </tr>
+        <tr>
+            <td>Approximate Payments:</td>
+            <td><button onclick="calculate()">Calculate</button></td>
+        </tr>
+        <tr>
+            <td>Monthly payment:</td>
+            <td>$<span class="output" id="payment"></span></td>
+        </tr>
+        <tr>
+            <td>Total patment:</td>
+            <td>$<span class="output" id="total"></span></td>
+        </tr>
+        <tr>
+            <td>Total interest:</td>
+            <td>$<span class="output" id="totalinterset"></span> </td>
+        </tr>
+        <tr>
+            <th>Sponsors:</th>
+            <td colspan="2">Apply for your loan with one fo these fine lenders:
+                <div id="lenders"></div>
+            </td>
+        </tr>
+    </table>
+    <script>
+        function calculate(){
+            // 查找文档中元素
+            var amount = document.getElementById("amount")
+            var apr = document.getElementById("apr")
+            var years = document.getElementById("years")
+            var zipcode = document.getElementById("zipcode")
+            var payment = document.getElementById("payment")
+            var total = document.getElementById("total")
+            var totalinterset = document.getElementById("totalinterset")
+            // 如果所有输入合法，将从input获取输入数据
+            // 将百分比转为小数，并将年利率转为月利率
+            // 将年度赔付转为月度赔付
+            var principal = parseFloat(amount.value)
+            var interest = parseFloat(apr.value)/100/12
+            var payments = parseFloat(years.value)*12
+            // 计算月度赔付数据
+            var x = Math.pow(1+interest,payments)//Math.pow()进行幂次运算
+            var monthly = (principal*x*interest)/(x-1)
+            // 如果没有超过JS显示范围，且用户输入正确，这里展示合法的结果
+            if(isFinite(monthly)){
+                payment.innerHTML = monthly.toFixed(2)
+                total.innerHTML = (monthly*payments).toFixed(2)
+                totalinterset.innerHTML = ((monthly*payments)-principal).toFixed(2)
+                // 存储用户的数据，方便下次访问
+            //     save(amount.value,apr.value,years.value,zipcode.value)
+                // 找到并展示本地放贷人，忽视网络错误
+                try{//捕获这段代码抛出的所有异常
+                    getLenders(amount.value,apr.value,years.value,zipcode.value)
+                }
+                catch(e){/*忽略这些异常*/}
+                // 图表展示贷款余额、利息和资产收益
+                chart(principal,interest,monthly,payments)
+            }
+            else{
+                // 输入错误或不完整，清除之前的输出数据
+                payment.innerHTML = ""
+                total.innerHTML = ""
+                totalinterset.innerHTML = ""
+                chart()                     //不传参则清除图表
+            }
+        }
+        // 在canvas中用图表展示数据，如果不传参则清除图表
+        function chart(principal,interest,monthly,payments){
+            var graph = document.getElementById('graph')
+            graph.width = graph.width
+            // 如果不传参或者浏览器不支持画布则直接返回
+            if(arguments.length == 0||!graph.getContext) return
+            // 获得画布元素的context对象，此对象定义了一组绘画API
+            var g = graph.getContext("2d")  //所有的绘画操作都基于此对象
+            var width = graph.width,height = graph.height    //获取画布大小
+            //将付款数字和美元数据转换为像素
+            function paymentToX(n){
+                return n*width/payments
+            }
+            function amountToY(n){
+                return height-(n*height/(monthly*payments*1.05))
+            }
+            // 付款数据是一条直线。从（0.0）到（payments,monthly*payments)
+            g.moveTo(paymentToX(0),amountToY(0))                           //从左下方开始
+            g.lineTo(paymentToX(payments),amountToY(monthly*payments))      //绘制到右上方
+            g.lineTo(paymentToX(payments),amountToY(0))                     //再到右下方
+            g.closePath();                                                  //将结尾连接至开头
+            g.fillStyle="#f88"
+            g.fill()
+            g.font="bold 12px sans-serif"
+            g.fillText('Total Interest Payments',20,20)
+            var equity=0
+            g.beginPath()
+            g.moveTo(paymentToX(0),amountToY(0))
+            for(var p = 1;p <= payments;p++){
+                var thisMonthsInterest = (principal-equity)*interest
+                equity += (monthly-thisMonthsInterest)
+                g.lineTo(paymentToX(p),amountToY(equity))
+                
+            }
+                g.lineTo(paymentToX(payments),amountToY(0))
+                g.closePath()
+                g.fillStyle = "green"
+                g.fill()
+                g.fillText("Total Equity",20,35)
+
+                var bal = principal
+                g.beginPath()
+                g.moveTo(paymentToX(0),amountToY(bal))
+                for(var p = 1;p <= payments;p++){
+                    var thisMonthsInterest = bal*interest
+                    bal -= (monthly-thisMonthsInterest)
+                    g.lineTo(paymentToX(p),amountToY(bal))
+                }
+                g.lineWidth=3
+                g.stroke()
+                g.fillStyle='black'
+                g.fillText('Loan Balance',20,50)
+
+                g.textAlign="center"
+                var y=amountToY(0)
+                for(var year=1;year*12<=payments;year++){
+                    var x=paymentToX(year*12)
+                    g.fillRect(x-0.5,y-3,1,3)
+                    if(year==1){
+                        g.fillText("year",x,y-5)
+                    }
+                    if(year%5==0&&year*12!==payments){
+                        g.fillText(String(year),x,y-5)
+                    }
+                }
+                g.textAlign="right"
+                g.textBaseline="middle"
+                var ticks=[monthly*payments,principal]
+                var rightEdge=paymentToX(payments)
+                for(var i = 0;i < ticks.length;i++){
+                    var y = amountToY(ticks[i])
+                    g.fillRect(rightEdge-3,y-0.5,3,1)
+                    g.fillText(String(ticks[i].toFixed(0)),rightEdge-5,y)
+                }
+        }
+    </script>
 </body>
 </html>
